
WIP      [SCRAPERS] MAME offline scraper: include ESRB field. Take it from GameInfoDB.

WIP      [SCRAPERS] MAME offline scraper: include plot field. Take it from GameInfoDB.

WIP      [SCRAPERS] Update MAME Offline Scraper database to version latest version 0.212

WIP      [SCRAPERS] Upgrade and fix  AEL Offline scraper databases.
         Do the best you can for a decent 0.9.8 release.


[B]Advanced Emulator Launcher | version 0.9.8-beta1 | XX August 2019[/B]

FEATURE  [SCRAPERS] Copy scraper stuff from master branch by Chrisism.

FEATURE  [SCRAPERS] Fix MobyGames scraper and use new MobyGames API.
         See http://www.mobygames.com/info/api

FEATURE  [SCRAPERS] Fix TheGamesDB scraper.
         There has been a change in the web site including a new API.
         See https://github.com/Wintermute0110/plugin.program.advanced.emulator.launcher/issues/75

FEATURE  [SCRAPERS] Have a look at ScreenScraper and consider it for an online scraper.
         See https://www.screenscraper.fr/
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2622839#pid2622839

FEATURE  [SCRAPERS] Fix ArcadeDB scraper. Use the new ArcadeDB API.
         It has been a while since this scraper is not working any more.

FEATURE  [SCRAPERS] Fix AEL Offline Scraper.

FEATURE  [SCRAPERS] Add support for ScummVM platform in the Offline Scraper.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2629084#pid2629084

WIP NOW  [SCRAPERS] Warn user if missing scraper API keys, required stuff, etc., before scraping.
         Also, improve the scraper error reporting and the disabling of the scraper object
         if the web site is overloaded.
         Make sure TGDB scraper works like a charm. [DONE]
         Update MobyGames scraper. [DONE]
         Update ScreenSraper scraper. [WIP NOW]
         Update ArcadeDB scraper.

FEATURE  [SCRAPERS] Utility to check TheGamesDB monthly allowance.

FEATURE  [SCRAPERS] Utility to check MobyGames monthly allowance.
